--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
   "dependencies": {
     "@emailjs/browser": "^4.3.3",
     "@hookform/resolvers": "^3.3.4",
+    "@walletconnect/client": "^1.8.0",
+    "@walletconnect/ethereum-provider": "^2.18.0",
+    "@web3modal/ethereum": "^2.7.1",
+    "@web3modal/react": "^2.7.1",
     "bootstrap": "^5.3.3",
+    "browserslist": "^4.24.4",
+    "caniuse-lite": "^1.0.30001700",
     "ethers": "^6.13.5",
     "firebase": "^11.2.0",
     "ioredis": "^5.4.2",
@@ -26,6 +32,9 @@
     "react-toastify": "^10.0.5",
     "react-use": "^17.5.0",
     "sass": "^1.72.0",
+    "viem": "^2.23.2",
+    "wagmi": "^2.14.11",
+    "web3modal": "^1.9.12",
     "wowjs": "^1.1.3",
     "yup": "^1.4.0"
   },
