--- a/package.json
+++ b/package.json
@@ -11,8 +11,14 @@
   "dependencies": {
     "@emailjs/browser": "^4.3.3",
     "@hookform/resolvers": "^3.3.4",
+    "@reown/appkit": "^1.6.9",
+    "@reown/appkit-adapter-ethers": "^1.6.9",
+    "@reown/walletkit": "^1.2.1",
     "@walletconnect/client": "^1.8.0",
+    "@walletconnect/core": "^2.19.0",
     "@walletconnect/ethereum-provider": "^2.18.0",
+    "@walletconnect/utils": "^2.19.0",
+    "@walletconnect/web3-provider": "^1.8.0",
     "@web3modal/ethereum": "^2.7.1",
     "@web3modal/react": "^2.7.1",
     "bootstrap": "^5.3.3",
@@ -22,9 +28,11 @@
     "firebase": "^11.2.0",
     "ioredis": "^5.4.2",
     "next": "14.1.4",
+    "pino-pretty": "^13.0.0",
     "react": "^18",
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.4",
+    "react-ga4": "^2.1.0",
     "react-hook-form": "^7.51.1",
     "react-icons": "^5.2.1",
     "react-paginate": "^8.2.0",
