--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ethers": "^6.13.5",
     "firebase": "^11.2.0",
     "ioredis": "^5.4.2",
+    "lucide-react": "^0.507.0",
     "next": "14.1.4",
     "pino-pretty": "^13.0.0",
     "react": "^18",
